fix(order-counter): fixed the height of the horizontal scrollbar

--- a/src/components/order-counter/order-counter.module.css
+++ b/src/components/order-counter/order-counter.module.css
@@ -25,7 +25,7 @@
 }
 
 .list::-webkit-scrollbar {
-  width: 8px;
+  height: 8px;
 }
 .list::-webkit-scrollbar-track {
   background: var(--background-element);
